--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="container">
       	<div class="row">
       		<div class="span12">
-      		<h3>Benefícios</h3>
+      		<h3>Serf</h3>
           <ul>
             <li>Rapidez</li>
             <li>Segurança</li>
