--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <p>Av. Ernesto Neugebauer, 1050 - Bairro Humaitá - CEP 90250-140</p>
             <p>Telefone: (51) 3362.3232 <a href="mailto:portoalegre@bentoencomendas.com.br">portoalegre@bentoencomendas.com.br</a></p>
           </div>
-          <div class="span5">
+          <div class="span5 pull-right">
             <h3>Unidade <span>Bento Gonçalves</span></h3>
             <p>R. Basílio Zorzi, 715 | Bairro Jardim Gloria - CEP 95700-000</p>
             <p>Telefone: (54) 3452.4088 | <a href="mailto:bento@bentoencomendas.com.br">bento@bentoencomendas.com.br</a></p>
@@ -66,7 +66,7 @@
             <p>R. Jacob Brunetta, 1470 | Bairro Sta Lucia | CEP 95030-390</p>
             <p>Telefone: (54) 3211.6006 | <a href="mailto:caxias@bentoencomendas.com.br">caxias@bentoencomendas.com.br</a></p>
           </div>
-          <div class="span5">
+          <div class="span5 pull-right">
             <h3>Unidade <span>Erechim</span></h3>
             <p>R. Dr. Alcebíades da Cunha Cabral, 370 | Parque Lívia | CEP 99700-000</p>
             <p>Telefone (54) 3519.4818 | <a href="mailto:erechim@bentoencomendas.com.br">erechim@bentoencomendas.com.br</a></p>
@@ -77,7 +77,7 @@
             <p>Telefone: (51) 3748.4961</p>
             <p><a href="mailto:lajeado@bentoencomendas.com.br">lajeado@bentoencomendas.com.br</a></p>
           </div>
-          <div class="span5">
+          <div class="span5 pull-right">
             <h3>Unidade <span>Nova Prata</span></h3>
             <p>RST 470, km 126, S/N | Bairro São Cristóvão | CEP 95320-000</p>
             <p>Telefone: (54) 3242.7138</p>
@@ -89,7 +89,7 @@
             <p>Telefone (54) 3313.4888</p>
             <p><a href="mailto:passofundo@bentoencomendas.com.br">passofundo@bentoencomendas.com.br</a></p>
           </div>
-          <div class="span5">
+          <div class="span5 pull-right">
             <h3>Unidade <span>Serafina Correa</span></h3>
             <p>Rua Soledade, 160 | Bairro Centro | CEP 99250-000</p>
             <p>Telefone: (54) 3444.1668</p>
