--- a/index.html
+++ b/index.html
@@ -52,45 +52,45 @@
       <div class="container">
         <h2>Unidades</h2>
         <div class="row">
-          <div class="span5">
+          <div id="portoalegre-block" class="span5">
             <h3>Matriz <span>Porto Alegre</span></h3>
             <p>Av. Ernesto Neugebauer, 1050 - Bairro Humaitá - CEP 90250-140</p>
             <p>Telefone: (51) 3362.3232 <a href="mailto:portoalegre@bentoencomendas.com.br">portoalegre@bentoencomendas.com.br</a></p>
           </div>
-          <div class="span5 pull-right">
+          <div id="bentogoncalves-block" class="span5 pull-right">
             <h3>Unidade <span>Bento Gonçalves</span></h3>
             <p>R. Basílio Zorzi, 715 | Bairro Jardim Gloria - CEP 95700-000</p>
             <p>Telefone: (54) 3452.4088 | <a href="mailto:bento@bentoencomendas.com.br">bento@bentoencomendas.com.br</a></p>
           </div>
-          <div class="span5">
+          <div id="caxiasdosul-block" class="span5">
             <h3>Unidade <span>Caxias do Sul</span></h3>
             <p>R. Jacob Brunetta, 1470 | Bairro Sta Lucia | CEP 95030-390</p>
             <p>Telefone: (54) 3211.6006 | <a href="mailto:caxias@bentoencomendas.com.br">caxias@bentoencomendas.com.br</a></p>
           </div>
-          <div class="span5 pull-right">
+          <div id="erechim-block" class="span5 pull-right">
             <h3>Unidade <span>Erechim</span></h3>
             <p>R. Dr. Alcebíades da Cunha Cabral, 370 | Parque Lívia | CEP 99700-000</p>
             <p>Telefone (54) 3519.4818 | <a href="mailto:erechim@bentoencomendas.com.br">erechim@bentoencomendas.com.br</a></p>
           </div>
-          <div class="span5">
-            <h3>Unidade <span>Lageado</span></h3>
+          <div id="lajeado-block" class="span5">
+            <h3>Unidade <span>Lajeado</span></h3>
             <p>Av. Castelo Branco, 42 | Bairro Florestal | CEP 95900-000</p>
             <p>Telefone: (51) 3748.4961</p>
             <p><a href="mailto:lajeado@bentoencomendas.com.br">lajeado@bentoencomendas.com.br</a></p>
           </div>
-          <div class="span5 pull-right">
+          <div id="novaprata-block" class="span5 pull-right">
             <h3>Unidade <span>Nova Prata</span></h3>
             <p>RST 470, km 126, S/N | Bairro São Cristóvão | CEP 95320-000</p>
             <p>Telefone: (54) 3242.7138</p>
             <p><a href="mailto:novaprata@bentoencomendas.com.br">novaprata@bentoencomendas.com.br</a></p>
           </div>
-          <div class="span5">
+          <div id="passofundo-block" class="span5">
             <h3>Unidade <span>Passo Fundo</span></h3>
             <p>Rua Angelo Preto, 278 | Bairro Polular | CEP 99010-270</p>
             <p>Telefone (54) 3313.4888</p>
             <p><a href="mailto:passofundo@bentoencomendas.com.br">passofundo@bentoencomendas.com.br</a></p>
           </div>
-          <div class="span5 pull-right">
+          <div id="serafinacorrea-block" class="span5 pull-right">
             <h3>Unidade <span>Serafina Correa</span></h3>
             <p>Rua Soledade, 160 | Bairro Centro | CEP 99250-000</p>
             <p>Telefone: (54) 3444.1668</p>
