--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <div class="navbar-inner">
           <div class="container">
             <a class="brand" href="#"><img src="assets/logo.png" alt="logo" width="150" height="60"></a>
+            <ul class="nav pull-right">
+            <li><a href="#">Unidades</a></li>
+            <li><a href="#services">Serviço</a></li>
+            <li><a href="#">Sobre</a></li>
+          </ul>
+
           </div>
         </div><!-- /navbar-inner -->
     </div><!-- /navbar -->
@@ -27,12 +33,12 @@
           <div class="span12">
             <h1>Agilidade e eficiência em logística</h1>
             <p>Logística, transporte e distribuição de cargas fracionadas e encomendas com extrema rapidez, segurança, eficiência, consistência, controle e comprometimento, agregando valor aos negócios de nosso clientes.</p>
-            <a href="#" class="btn btn-cta">Link de conversão</a>
+            <a href="#" class="btn btn-cta">Acesse nosso sistema</a>
           </div>
         </div>
       </div>
     </div>  
-    </header>  
+    </header>    
     <section class="services">
       <div class="container">
         <h2>Serviços</h2>
@@ -100,7 +106,8 @@
       <div id="maps">
       </div>
     </section>
-    
+    <section class="contact">
+    </section>
         
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="assets/bootstrap.min.js"></script>
