--- a/index.html
+++ b/index.html
@@ -34,9 +34,21 @@
         <div class="row">
           <div class="span12">
             <h1>Agilidade e eficiência em logística</h1>
-            <p>Logística, transporte e distribuição de cargas fracionadas e encomendas com extrema rapidez, segurança, eficiência, consistência, controle e comprometimento, agregando valor aos negócios de nosso clientes.</p>
-            <a href="#" class="btn btn-cta">Posição de Entrega<span>Confira online</span></a>
-			<a href="assets/city.pdf" target="blank" class="btn btn-cta btn-city">Cidades Atendidas<span>Confira</span></a>
+            <p>Logística, transporte e distribuição de cargas fracionadas e encomendas com extrema rapidez, segurança, eficiência, consistência, controle e comprometimento, agregando valor aos negócios de nosso clientes.</p>			
+			<div class="btn-group">
+			  <button class="btn btn-large">Atendimento online</button>
+			  <button class="btn btn-large dropdown-toggle" data-toggle="dropdown">
+			    <span class="caret"></span>
+			  </button>
+			  <ul class="dropdown-menu">
+			    <li><a href="assets/cidades.pdf">Cidades Atendidas</a></li>
+				<li><a href="feedback.html">Posição de Entrega</a></li>
+				<li><a href="feedback.html">Solicitação de Coleta</a></li>
+				<li><a href="feedback.html">Cópia de conhecimento</a></li>
+				<li><a href="feedback.html">Cotação</a></li>
+				<li><a href="feedback.html">2ª Via de boleto</a></li>
+			  </ul>
+			</div>
           </div>
         </div>
       </div>
@@ -47,11 +59,12 @@
         <h2>Serviços</h2>
       	<div class="row">
       		<div class="span8">
-          <p>Possibilitamos que você planeje seus negócios com muito mais tranquilidade, segurança, economia e agilidade, através do serviço que é a nossa especialidade: a coleta e a entrega de mercadorias com extrema rapidez.</p>
-          <p>Localizada próxima às principais vias de acesso da Grande Porto Alegre, nossa central possibilita agilidade nas operações e nos procedimentos de embarque e recebimento de cargas e encomendas. Assim, com o apoio de nossas filiais no interior do estado, podemos fazer com que sua carga chegue na sua mão no menor tempo.</p>
-          <p>Aos clientes com necessidades especiais de transporte e logística, disponibilizamos um serviço único e personalizado, adaptado exclusivamente a estas necessidades. Para atingir o padrão de qualidade exigido por estes clientes, adequamos horários e tipos de veículo, que podem variar entre baús, sider ou carroceria aberta.</p>
+						<p>Possibilitamos que você planeje seus negócios com muito mais tranquilidade, segurança, economia, através dos serviços que são nossa especialidade: coleta, entrega e distribuição de mercadorias com excelência.</p>
+						<p>Com mais de 5000 metros quadrados e localizada próxima às principais vias de acesso da Grande Porto Alegre, nossa matriz possibilita agilidade nas operações e nos procedimentos de embarque e recebimento de cargas e encomendas. Com o apoio de nossas unidades no interior do estado, fazemos com que sua carga chegue em seu destino com rapidez e eficiência.</p>
+						<p>Aos clientes com necessidades especiais de transporte, armazenamento, distribuição e logística, disponibilizamos serviços personalizados, adaptados a estas necessidades, adequando horários, veículos e operações.</p>
       		</div><!-- Fim span -->
       		<div class="span4 rates">
+						<img src="assets/foto.jpg" width="300" height="200" alt="Foto">
       		</div>
       	</div><!-- Fim row -->
       </div><!-- Fim container -->
@@ -108,11 +121,13 @@
             <h3>Unidade <span>Santa Cruz</span></h3>
             <p>R. Venancio Aires, 1435 | Bairro Centro | CEP 96810-100</p>
             <p>Telefone: (54) 3715.3246</p>
+			<p><a href="mailto:santacruz@bentoencomendas.com.br">santacruz@bentoencomendas.com.br</a></p>
           </div>
           <div id="novaprata-block" class="span5 pull-right">
             <h3>Unidade <span>Nova Prata</span></h3>
             <p>Av. Brasil, 561 | Bairro São Pelegrino | CEP 95320-000</p>
             <p>Telefone: (54) 3242.3313</p>
+			<p><a href="mailto:novaprata@bentoencomendas.com.br">novaprata@bentoencomendas.com.br</a></p>
           </div>
         </div>
       </div>
