--- a/feedback.html
+++ b/feedback.html
@@ -26,27 +26,27 @@
     </div><!-- /navbar -->
     <section class="services">
       <div id="services" class="container">
-        <h2>Agradecemos seu contato.</h2>
-				<p>Estamos desenvolvendo novas soluções on line para melhor atender nossos clientes. Faça solicitação “abaixo”:</p>	
+        <h2>Atendimento online</h2>	
       	<div class="row">
-      		<div class="span8">
-						<div id="wufoo-m7x3z9">
-						Fill out my <a href="http://bentoencomendas.wufoo.com/forms/m7x3z9">online form</a>.
-						</div>
-						<script type="text/javascript">var m7x3z9;(function(d, t) {
-						var s = d.createElement(t), options = {
-						'userName':'bentoencomendas', 
-						'formHash':'m7x3z9', 
-						'autoResize':true,
-						'height':'557',
-						'async':true,
-						'header':'hide'};
-						s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'wufoo.com/scripts/embed/form.js';
-						s.onload = s.onreadystatechange = function() {
-						var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-						try { m7x3z9 = new WufooForm();m7x3z9.initialize(options);m7x3z9.display(); } catch (e) {}};
-						var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
-						})(document, 'script');</script>
+      		<div class="span8 forms">
+            <div id="wufoo-s7w6m7">
+            Fill out my <a href="http://caixadeideias.wufoo.com/forms/s7w6m7">online form</a>.
+            </div>
+            <script type="text/javascript">var s7w6m7;(function(d, t) {
+            var s = d.createElement(t), options = {
+            'userName':'caixadeideias', 
+            'formHash':'s7w6m7', 
+            'autoResize':true,
+            'height':'1220',
+            'async':true,
+            'header':'hide', 
+            'ssl':true};
+            s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'wufoo.com/scripts/embed/form.js';
+            s.onload = s.onreadystatechange = function() {
+            var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+            try { s7w6m7 = new WufooForm();s7w6m7.initialize(options);s7w6m7.display(); } catch (e) {}};
+            var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+            })(document, 'script');</script>
       		</div><!-- Fim span -->
       	</div><!-- Fim row -->
       </div><!-- Fim container -->
