--- a/index.html
+++ b/index.html
@@ -34,23 +34,11 @@
         <div class="row">
           <div class="span12">
             <h1>Agilidade e eficiência em logística</h1>
-            <p>Logística, transporte e distribuição de cargas fracionadas e encomendas com extrema rapidez, segurança, eficiência, consistência, controle e comprometimento, agregando valor aos negócios de nosso clientes.</p>			
-			<div class="btn-group">
-			  <button class="btn btn-large">Atendimento online</button>
-			  <button class="btn btn-large dropdown-toggle" data-toggle="dropdown">
-			    <span class="caret"></span>
-			  </button>
-			  <ul class="dropdown-menu">
-			    <li><a href="assets/cidades.pdf">Cidades Atendidas</a></li>
-				<li><a href="feedback.html">Posição de Entrega</a></li>
-				<li><a href="feedback.html">Solicitação de Coleta</a></li>
-				<li><a href="feedback.html">Cópia de conhecimento</a></li>
-				<li><a href="feedback.html">Cotação</a></li>
-				<li><a href="feedback.html">2ª Via de boleto</a></li>
-			  </ul>
-			</div>
+            <p>Logística, transporte e distribuição de cargas fracionadas e encomendas com extrema rapidez, segurança, eficiência, consistência, controle e comprometimento, agregando valor aos negócios de nosso clientes.</p>	
+            <a href="feedback.html" class="btn btn-cta" target="_parent">Atendimento<span>Online</span></a>
+            <a href="assets/city-ok.pdf" target="blank" class="btn btn-cta btn-city">Cidades Atendidas<span>Confira</span></a>
           </div>
-        </div>
+        </div> 
       </div>
     </div>
     </header>
@@ -75,59 +63,73 @@
         <div class="row">
           <div id="portoalegre-block" class="span5">
             <h3>Matriz <span>Porto Alegre</span></h3>
-            <p>Av. Ernesto Neugebauer, 1050 - Bairro Humaitá - CEP 90250-140</p>
-            <p>Telefone: (51) 3362.3232 <a href="mailto:portoalegre@bentoencomendas.com.br">portoalegre@bentoencomendas.com.br</a></p>
+            <p>Av. Ernesto Neugebauer, 1050 - Bairro Humaitá</p>
+            <p>CEP 90250-140</p>
+            <p>Telefone: (51) 3362.3232</p>
+            <p><a href="mailto:portoalegre@bentoencomendas.com.br">portoalegre@bentoencomendas.com.br</a></p>
           </div>
           <div id="bentogoncalves-block" class="span5 pull-right">
             <h3>Unidade <span>Bento Gonçalves</span></h3>
-            <p>R. Arlindo Baccin, 601 | Bairro Loteamento Vinhedos - CEP 95700-000</p>
-            <p>Telefone: (54) 3452.4088 | <a href="mailto:bento@bentoencomendas.com.br">bento@bentoencomendas.com.br</a></p>
+            <p>R. Arlindo Baccin, 601 - Bairro Loteamento Vinhedos</p>
+            <p>CEP 95700-000</p>
+            <p>Telefone: (54) 3452.4088</p>
+            <p><a href="mailto:bento@bentoencomendas.com.br">bento@bentoencomendas.com.br</a></p>
           </div>
           <div id="caxiasdosul-block" class="span5">
             <h3>Unidade <span>Caxias do Sul</span></h3>
-            <p>R. Jacob Brunetta, 1470 | Bairro Sta Lucia | CEP 95030-390</p>
-            <p>Telefone: (54) 3211.6006 | <a href="mailto:caxias@bentoencomendas.com.br">caxias@bentoencomendas.com.br</a></p>
+            <p>R. Jacob Brunetta, 1470 - Bairro Sta Lucia</p>
+            <p>CEP 95030-390</p>
+            <p>Telefone: (54) 3211.6006</p>
+            <p><a href="mailto:caxias@bentoencomendas.com.br">caxias@bentoencomendas.com.br</a></p>
           </div>
           <div id="erechim-block" class="span5 pull-right">
             <h3>Unidade <span>Erechim</span></h3>
-            <p>Br. 153, Km. 49, nº 716 Pavilhão 2 sala A | Bairro Estevão Carraro | CEP 99700-000</p>
-            <p>Telefone (54) 3522.9711 | <a href="mailto:erechim@bentoencomendas.com.br">erechim@bentoencomendas.com.br</a></p>
+            <p>Br. 153, Km. 49, nº 716 Pavilhão 2 sala A - Bairro Estevão Carraro</p>
+            <p>CEP 99700-000</p>
+            <p>Telefone (54) 3522.9711</p>
+            <p><a href="mailto:erechim@bentoencomendas.com.br">erechim@bentoencomendas.com.br</a></p>
           </div>
           <div id="lajeado-block" class="span5">
             <h3>Unidade <span>Lajeado</span></h3>
-            <p>Av. Castelo Branco, 42 sala 11 | Bairro Florestal | CEP 95900-000</p>
+            <p>Av. Castelo Branco, 42 sala 11 - Bairro Florestal 
+            <p>CEP 95900-000</p>
             <p>Telefone: (51) 3714.5111</p>
             <p><a href="mailto:lajeado@bentoencomendas.com.br">lajeado@bentoencomendas.com.br</a></p>
           </div>
           <div id="novaprata-block" class="span5 pull-right">
             <h3>Unidade <span>Nova Prata</span></h3>
-            <p>RST 470, km 126, S/N | Bairro São Cristóvão | CEP 95320-000</p>
+            <p>RST 470, km 126, S/N - Bairro São Cristóvão</p>
+            <p>CEP 95320-000</p>
             <p>Telefone: (54) 3242.7138</p>
             <p><a href="mailto:novaprata@bentoencomendas.com.br">novaprata@bentoencomendas.com.br</a></p>
           </div>
           <div id="passofundo-block" class="span5">
             <h3>Unidade <span>Passo Fundo</span></h3>
-            <p>R. Dr. Phelippe da cunha, 435 | Bairro Jardim América | CEP 99036-240</p>
+            <p>R. Dr. Phelippe da cunha, 435 - Bairro Jardim América
+            <p>CEP 99036-240</p>
             <p>Telefone (54) 9917.9637 - (54) 9969.4944</p>
             <p><a href="mailto:passofundo@bentoencomendas.com.br">passofundo@bentoencomendas.com.br</a></p>
           </div>
           <div id="serafinacorrea-block" class="span5 pull-right">
             <h3>Unidade <span>Serafina Correa</span></h3>
-            <p>Rua Soledade, 160 | Bairro Gramadinho | CEP 99250-000</p>
+            <p>Rua Soledade, 160 | Bairro Gramadinho
+            <p>CEP 99250-000</p>
             <p>Telefone: (54) 3444.1668</p>
             <p><a href="mailto:serafinacorrea@bentoencomendas.com.br">serafinacorrea@bentoencomendas.com.br</a></p>
           </div>
           <div id="santacruz-block" class="span5">
             <h3>Unidade <span>Santa Cruz</span></h3>
-            <p>R. Venancio Aires, 1435 | Bairro Centro | CEP 96810-100</p>
+            <p>R. Venancio Aires, 1435 - Bairro Centro
+            <p>CEP 96810-100</p>
             <p>Telefone: (54) 3715.3246</p>
-			<p><a href="mailto:santacruz@bentoencomendas.com.br">santacruz@bentoencomendas.com.br</a></p>
+			      <p><a href="mailto:santacruz@bentoencomendas.com.br">santacruz@bentoencomendas.com.br</a></p>
           </div>
           <div id="novaprata-block" class="span5 pull-right">
             <h3>Unidade <span>Nova Prata</span></h3>
-            <p>Av. Brasil, 561 | Bairro São Pelegrino | CEP 95320-000</p>
+            <p>Av. Brasil, 561 | Bairro São Pelegrino
+            <p>CEP 95320-000</p>
             <p>Telefone: (54) 3242.3313</p>
-			<p><a href="mailto:novaprata@bentoencomendas.com.br">novaprata@bentoencomendas.com.br</a></p>
+			      <p><a href="mailto:novaprata@bentoencomendas.com.br">novaprata@bentoencomendas.com.br</a></p>
           </div>
         </div>
       </div>
